updated bootstrap import

--- a/Changelog.html
+++ b/Changelog.html
@@ -2,16 +2,17 @@
   <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     
-        <!-- Bootstrap CSS for styling and layout-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
         <link rel="stylesheet" href="./styles/style.css">
         <title>Changelog (Linderman)</title>
     </head>
     <body>
     <nav class='navbar navbar-expand navbar-light' style='background-color:mediumaquamarine' >
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSide">
@@ -40,13 +41,13 @@
         </header>
         <main class='changelog'>
             <p>
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#milestone1" aria-expanded="false" aria-controls="milestone1">
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#milestone1" aria-expanded="false" aria-controls="milestone1">
                     Milestone 1
                 </button>
             </p>
             <div class='collapse' id="milestone1">
                 <p>
-                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#addedM1' aria-expanded='false' aria-controls='addedM1'><h3>Added</h3></button>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#addedM1' aria-expanded='false' aria-controls='addedM1'><h3>Added</h3></button>
                 </p>
                 <div class="collapse added" id='addedM1'>
                     <h4>08/31/2021</h4>
@@ -81,7 +82,7 @@
                     <br>
                 </div>
                 <p>
-                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#changedM1' aria-expanded='false' aria-controls='changedM1'><h3>Changed</h3></button>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#changedM1' aria-expanded='false' aria-controls='changedM1'><h3>Changed</h3></button>
                 </p>
                 <div class="collapse added" id='changedM1'>
                     <h4>09/09/2021</h4>
@@ -90,11 +91,11 @@
                 </div>
             </div>
             <p>
-                <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone2' aria-expanded='false' aria-controls='milestone2'><h2>Milestone 2</h2></button>
+                <button class='btn btn-primary' type='button' data-bs-toggle='collapse' data-bs-target='#milestone2' aria-expanded='false' aria-controls='milestone2'><h2>Milestone 2</h2></button>
             </p>
             <div class='collapse' id="milestone2">
                 <p>
-                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#addedM2' aria-expanded='false' aria-controls='addedM2'><h3>Added</h3></button>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#addedM2' aria-expanded='false' aria-controls='addedM2'><h3>Added</h3></button>
                 </p>
                 <div class="collapse added" id='addedM2'>
                     <h3>Added</h3>
@@ -109,7 +110,7 @@
                     <br>
                 </div>
                 <p>
-                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#changedM2' aria-expanded='false' aria-controls='changedM2'><h3>Changed</h3></button>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#changedM2' aria-expanded='false' aria-controls='changedM2'><h3>Changed</h3></button>
                 </p>
                 <div class="collapse added" id='changedM2'>
                     <h4>09/14/2021</h4>
@@ -126,11 +127,11 @@
                 </div>
             </div>
             <p>
-                <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone3' aria-expanded='false' aria-controls='milestone3'><h2>Milestone 3</h2></button>
+                <button class='btn btn-primary' type='button' data-bs-toggle='collapse' data-bs-target='#milestone3' aria-expanded='false' aria-controls='milestone3'><h2>Milestone 3</h2></button>
             </p>
             <div class='collapse' id="milestone3">
                 <p>
-                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#addedM3' aria-expanded='false' aria-controls='addedM3'><h3>Added</h3></button>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#addedM3' aria-expanded='false' aria-controls='addedM3'><h3>Added</h3></button>
                 </p>
                 <div class="collapse added" id='addedM3'>
                     <h4>09/23/2021</h4>
@@ -139,7 +140,7 @@
                     <br>
                 </div>
                 <p>
-                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#changedM3' aria-expanded='false' aria-controls='changedM3'><h3>Changed</h3></button>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#changedM3' aria-expanded='false' aria-controls='changedM3'><h3>Changed</h3></button>
                 </p>
                 <div class="collapse added" id='changedM3'>
                     <br>
@@ -149,5 +150,6 @@
                 </div>
             </div>
         </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     </body>
   </html>
