--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./styles/style.css">
     <title>CISC275 Portfolio (Linderman)</title>
   </head>
   <body>
     <nav class='navbar navbar-expand navbar-light' style='background-color:mediumaquamarine' >
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarMain">
@@ -50,15 +54,15 @@
           </div>
         </div>
         <div class="col-5 carousel">
-          <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#penguinSlidesControls" data-slide-to="0" class="active"></li>
-              <li data-target="#penguinSlidesControls" data-slide-to="1"></li>
-              <li data-target="#penguinSlidesControls" data-slide-to="2"></li>
-              <li data-target="#penguinSlidesControls" data-slide-to="3"></li>
-              <li data-target="#penguinSlidesControls" data-slide-to="4"></li>
-              <li data-target="#penguinSlidesControls" data-slide-to="5"></li>
-            </ol>
+          <div id="penguinSlidesControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
@@ -79,14 +83,14 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100 h-auto" alt="penguin">
               </div>
             </div>
-            <a class="carousel-control-prev" data-target="#penguinSlidesControls" role="button" data-slide="prev">
+            <button class="carousel-control-prev" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" data-target="#penguinSlidesControls" role="button" data-slide="next">
+            </button>
+            <button class="carousel-control-next" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
-            </a>
+            </button>
           </div>
         </div>
       </div>
@@ -96,5 +100,6 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
 </html>
