--- a/Changelog.html
+++ b/Changelog.html
@@ -42,7 +42,7 @@
         <main class='changelog'>
             <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#milestone1" aria-expanded="false" aria-controls="milestone1">
-                    Milestone 1
+                    <h2>Milestone 1</h2>
                 </button>
             </p>
             <div class='collapse' id="milestone1">
