added script to blackjack.html to switch card pic

--- a/Changelog.html
+++ b/Changelog.html
@@ -134,19 +134,32 @@
                     <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#addedM3' aria-expanded='false' aria-controls='addedM3'><h3>Added</h3></button>
                 </p>
                 <div class="collapse added" id='addedM3'>
+                    <h4>09/17-09/21</h4>
+                    <p>-Added various functions to blackjack.js, better detailed in commits.</p>
+                    <h4>09/22/2021</h4>
+                    <p>-Added card image above blackjack.html's "get a card" button. Added deck of cards to be cycled through with blackjack.js getCardTEST(), but unsuccessful so far.</p>
+                    <p>-Added text input box for name to blackjack.html, no use yet, but is functional.</p>
                     <h4>09/23/2021</h4>
                     <p>-Completed <a href="https://www.codecademy.com/learn/learn-typescript">Codecademy's Typescript tutorial</a></p>
                     <img src="./media/Typescript Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                    <p>-Added (nested) collapsible sections to Changelog</p>
                     <br>
                 </div>
                 <p>
                     <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#changedM3' aria-expanded='false' aria-controls='changedM3'><h3>Changed</h3></button>
                 </p>
                 <div class="collapse added" id='changedM3'>
+                    <h4>09/17-09/21</h4>
+                    <p>-Changed various functions and format in blackjack.js, better detailed in commits.</p>
                     <br>
                 </div>
                 <div class='notes'>
                     <h3>Notes</h3>
+                    <p>If my work looks frontloaded this milestone, see below. My presentable "products" came late, but I worked (struggled) consistently.</p>
+                    <p>This milestone was the most challenging (or frustrating) for me. I worked consistently, but didn't find much to show for it. My blackjack page and game in particular were a huge struggle without much clear payoff, due to various factors. I do feel I learned a lot through my mistakes - javascript functions that were being called before they were declared and couldn't be hoisted because I had stored them in a variable, for instance. The trial and error gave me constant headaches, but if there's a silver lining, I know I won't make the same mistakes again.</p>
+                    <p>Maybe the best example of this is my Bootstrap carousel and layout (and, later, these collapsible menus!). I struggled for 2 weeks on a carousel of pictures that wouldn't move, double and triple-checking my code. Everything looked correct. It was only on Thursday night that, at a glance, I noticed I was using Bootstrap v4.2., and the newest version was v5.1. I didn't think this would make a difference, but out of desperation and frustration, I revamped all my bootstrap source imports and formatting. Suddenly, everything worked perfectly. I wish I'd done that a week ago.</p>
+                    <p>Ironically, in finally fixing these items, I broke others. The various tweaks and compromises I'd made to try and 'fix' my layout, which wasn't looking the way I thought it should despite my formatting, were suddenly creating a mess because they had been compensating for elements that weren't functioning properly. As I write this, I'm attempting to clean some of it up, but I apologize if the page is messy.</p>
                 </div>
             </div>
         </main>
