format tweaks, changelog + todo finalized.

--- a/Changelog.html
+++ b/Changelog.html
@@ -145,6 +145,7 @@
                     <br>
                     <p>-Added (nested) collapsible sections to Changelog</p>
                     <br>
+                    <p>-Added scripts to blackjack.html to swap cards. Edit: currently not functional.</p>
                 </div>
                 <p>
                     <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#changedM3' aria-expanded='false' aria-controls='changedM3'><h3>Changed</h3></button>
