--- a/TODO.html
+++ b/TODO.html
@@ -73,6 +73,22 @@
                 <br>
                 <br>
             </div>
+            <div>
+                <h4>Milestone 3</h4>
+                <article>
+                    <h4>My plans for next week:</h4>
+                    <ul>
+                        <li>Finish learning React, currently I am not entirely up to speed with it.</li>
+                        <li>Work on integrating javascript with html - so far I've had trouble getting scripts (imported or internal) to reliably affect pages. High priority.</li>
+                        <li>Build something to demonstrate Typescript skill. I had meant to build a very basic Tic-Tac-Toe game, but because of the above issue with scripts I held off.</li>
+                        <li>Fix main page layout now that Bootstrap is working as intended (and use some React to help, if possible), bring associated pages a bit more up to par.</li>
+                        <li>Last week, I stated that I planned ot focus on smaller projects and avoid getting caught up in large ones. I failed to follow through on this, and instead spent much of this week figuratively bashing my head against a wall. Going forward, I am re-committing to that idea, even if it means dropping projects that are not working.</li>
+                        <li>Lastly - seek help! So far I've mostly worked through the challenges alone, but I want to make an effort to go TA office hours to ask when an issue is stumping me. My difficulty with scripts is a good place to start.</li>
+                    </ul>
+                </article>
+                <br>
+                <br>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     </body>
