--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
         <div class='col-7 page-main'>
           <div>
             <p class="page-main">
-            I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
-            </p>
-            <p class="page-main">
-            In the meantime, please enjoy these penguins, courtesy of Wikimedia.
-            </p>
+            I recently changed my Bootstrap version to 5.1, so I'm now fixing a few formatting issues (such as the size-changing main page).
+            <br>
+            Please enjoy this (finally working!) carousel of penguins, courtesy of Wikimedia.
+          </p>
           </div>
         </div>
         <div class="col-5 carousel">
@@ -65,7 +64,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-auto w-75" alt="penguin">
               </div>
               <div class="carousel-item">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100 h-100" alt="penguin">
@@ -80,7 +79,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
               </div>
               <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100 h-auto" alt="penguin">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-50 h-auto" alt="penguin">
               </div>
             </div>
             <button class="carousel-control-prev" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="prev">
