reverting carousel format, sizing issue

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-auto w-75" alt="penguin">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
               </div>
               <div class="carousel-item">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100 h-100" alt="penguin">
@@ -79,7 +79,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
               </div>
               <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-50 h-auto" alt="penguin">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100 h-auto" alt="penguin">
               </div>
             </div>
             <button class="carousel-control-prev" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="prev">
