header and footer position adjusted

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     </nav>
     <div class='container-fluid'>
       <div class='row header'>
-        <div class='col'>  
-          <h2>Geoff Linderman's CISC275 Portfolio</h2>
+        <div class='col'>
+          <div class='row'>
+            <h2>Geoff Linderman's CISC275 Portfolio</h2>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -95,7 +97,9 @@
       </div>
       <div class="row footer">
         <div class="col">
-          <a>glindy@udel.edu</a>
+          <div class='row'>
+            <a>glindy@udel.edu</a>
+          </div>
         </div>
       </div>
     </div>
