--- a/index.html
+++ b/index.html
@@ -44,54 +44,56 @@
           </div>
         </div>
       </div>
+      <!-- CAROUSEL START-->
+      <div class="row carousel">
+        <div id="penguinSlidesControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="5" aria-label="Slide 6"></button>
+          </div>
+          <div class="carousel-inner penguinCarousel">
+            <div class="carousel-item active">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Falkland_Islands_Penguins_41.jpg" class="d-block w-100 h-auto" alt="penguin">
+            </div>
+            <div class="carousel-item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Manchots_empereurs_tobogannent.JPG" class="d-block w-100 h-auto" alt="penguin">
+            </div>
+            <div class="carousel-item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100 h-auto" alt="penguin">
+            </div>
+            <div class="carousel-item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100 h-auto" alt="penguin">
+            </div>
+            <div class="carousel-item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
+            </div>
+            <div class="carousel-item">
+              <img src="https://commons.wikimedia.org/wiki/File:Rockhopper_Penguins_diving_into_the_water_(5565669078).jpg" class="d-block w-100 h-auto" alt="penguin">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </button>
+          <button class="carousel-control-next" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </button>
+        </div>
+      </div>
+      <!-- CAROUSEL END-->
       <div class="row">
-        <div class='col-7 page-main'>
+        <div class='col page-main'>
           <div>
             <p class="page-main">
             I recently changed my Bootstrap version to 5.1, so I'm now fixing a few formatting issues (such as the size-changing main page).
             <br>
             Please enjoy this (finally working!) carousel of penguins, courtesy of Wikimedia.
           </p>
-          </div>
-        </div>
-        <div class="col-5 carousel">
-          <div id="penguinSlidesControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="5" aria-label="Slide 6"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
-              </div>
-              <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100 h-100" alt="penguin">
-              </div>
-              <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100 h-auto" alt="penguin">
-              </div>
-              <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100 h-auto" alt="penguin">
-              </div>
-              <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
-              </div>
-              <div class="carousel-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100 h-auto" alt="penguin">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </button>
-            <button class="carousel-control-next" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </button>
           </div>
         </div>
       </div>
