carousel size changed (much too large)

--- a/index.html
+++ b/index.html
@@ -55,24 +55,24 @@
             <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="4" aria-label="Slide 5"></button>
             <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="5" aria-label="Slide 6"></button>
           </div>
-          <div class="carousel-inner penguinCarousel">
+          <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Falkland_Islands_Penguins_41.jpg" class="d-block w-100 h-auto" alt="penguin">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Falkland_Islands_Penguins_41.jpg" class="d-block" alt="penguin">
             </div>
             <div class="carousel-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Manchots_empereurs_tobogannent.JPG" class="d-block w-100 h-auto" alt="penguin">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Manchots_empereurs_tobogannent.JPG" class="d-block" alt="penguin">
             </div>
             <div class="carousel-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100 h-auto" alt="penguin">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block" alt="penguin">
             </div>
             <div class="carousel-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100 h-auto" alt="penguin">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block" alt="penguin">
             </div>
             <div class="carousel-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block" alt="penguin">
             </div>
             <div class="carousel-item">
-              <img src="https://commons.wikimedia.org/wiki/File:Rockhopper_Penguins_diving_into_the_water_(5565669078).jpg" class="d-block w-100 h-auto" alt="penguin">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Rockhopper_Penguins_diving_into_the_water_%285565669078%29.jpg/1200px-Rockhopper_Penguins_diving_into_the_water_%285565669078%29.jpg" class="d-block" alt="penguin">
             </div>
           </div>
           <button class="carousel-control-prev" type='button' data-bs-target="#penguinSlidesControls" data-bs-slide="prev">
