--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="4" aria-label="Slide 5"></button>
             <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="5" aria-label="Slide 6"></button>
           </div>
-          <div class="carousel-inner">
+          <div class="carousel-inner" style="max-width:900px; max-height:600px !important;">
             <div class="carousel-item active">
               <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Falkland_Islands_Penguins_41.jpg" class="d-block" alt="penguin">
             </div>
