layout adjustments, borders, header

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <div class='row header'>
         <div class='col'>
           <div class='row'>
-            <h2>Geoff Linderman's CISC275 Portfolio</h2>
+            <h3>Geoff Linderman's CISC275 Portfolio</h3>
           </div>
         </div>
       </div>
       <!-- CAROUSEL START-->
-      <div class="row carousel">
+      <div class="row carousel general">
         <div id="penguinSlidesControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#penguinSlidesControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <!-- CAROUSEL END-->
-      <div class="row">
+      <div class="row general">
         <div class='col page-main'>
           <div>
             <p class="page-main">
