added react app to main menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="https://github.com/glinderm/CISC275.github.io">Repository</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack/blackjack.html">Play Blackjack</a>
+            <a class="nav-link" href="https://glinderm.github.io/react-app/">Play React Etch-a-Sketch!</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/Changelog.html">Changelog</a>
