updated changelog w/ changes and final thoughts

--- a/Changelog.html
+++ b/Changelog.html
@@ -163,6 +163,32 @@
                     <p>Ironically, in finally fixing these items, I broke others. The various tweaks and compromises I'd made to try and 'fix' my layout, which wasn't looking the way I thought it should despite my formatting, were suddenly creating a mess because they had been compensating for elements that weren't functioning properly. As I write this, I'm attempting to clean some of it up, but I apologize if the page is messy.</p>
                 </div>
             </div>
+            <p>
+                <button class='btn btn-primary' type='button' data-bs-toggle='collapse' data-bs-target='#finalsubmit' aria-expanded='false' aria-controls='finalsubmit'><h2>Final Submission</h2></button>
+            </p>
+            <div class='collapse' id="finalsubmit">
+                <p>
+                    <button class='btn btn-success' type='button' data-bs-toggle='collapse' data-bs-target='#addedFinal' aria-expanded='false' aria-controls='addedFinal'><h3>Added</h3></button>
+                </p>
+                <div class="collapse added" id='addedFinal'>
+                    <h4>Week 4</h4>
+                    <p>-Completed several React tutorials/read up on documentation, particularly <a href="https://reactjs.org/tutorial/tutorial.html">React's Tic-Tac-Toe</a>.</p>
+                    <p>-Note: Also read and practiced basic Hooks, not included in original tutorial.</p>
+                    <br>
+                    <p>-Attempted to build a React Battleship game. Successfully completed an interactive two-board layout with restricted clicking based on player, drawing basic structure and guidance from a <a href="https://medium.com/@shifrb/how-to-build-tic-tac-toe-with-react-hooks-ca37f6040022">variant</a> of the Tic-Tac-Toe tutorial, but using Hooks.</p>
+                    <p>-Ultimately was unable to finish the build, with ships proving difficult to implement. With a little more time I'm confident I could have completed it, but up against the deadline I had a partially-built app with no discernable function. Much of original documentation for ships (interfaces, etc) is still present for evidence.</p>
+                    <br>
+                    <p>-Refactored the Battleship app into a simple etch-a-sketch style game, with an "AI" (highly artificial, not very intelligent) matching each click with a Jackson Pollock impression on its own board.</p>
+                    <p>-Note: I'm disappointed in this outcome, but I ultimately feel it was better to deploy an app with some function instead of a broken mess. As above, pieces of the original should still be accessible.</p>
+                    <br>
+                    <p>-Deployed etch-a-sketch app and updated main page to point to it, and removed deprecated blackjack page.</p>
+                    <br>
+                    </div>
+                <div class='notes'>
+                    <h3>Final thoughts</h3>
+                    <p>--As I mentioned above, I am disappointed with not putting forth my intended product. I feel the project was manageable, but I both found myself very short on time going into this week, and encountered some unexpected hiccups with deployment that caused me to stumble. The etch-a-sketch isn't what I'd hoped for, but I do think it's a small, fun app that still demonstrates a degree of familiarity with the material. Even with the challenges, I feel I've learned more in this past month than in almost any other class I've taken, and despite verything that is exciting. Unfortunately I can't be proud of this portfolio, but I learned as much from my mistakes as my successes. I hope it will be a solid foundation for work I can be more proud of in the future.</p>
+                </div>
+            </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     </body>
