added Changelog note forgotten change to main page

--- a/Changelog.html
+++ b/Changelog.html
@@ -183,6 +183,7 @@
                     <br>
                     <p>-Deployed etch-a-sketch app and updated main page to point to it, and removed deprecated blackjack page.</p>
                     <br>
+                    <p>-Addendum: I forgot to mention since it's not Typescript or React, I revamped my main main to feature a cleaned-up carousel front and center. I fixed the previous version that was inconsistently-sized and affected the rest of the page's layout whenever it changed picture, and I generally cleaned up the layout and made it more visually-pleasing. Not a major update, but I do think the result is good for a basic web landing page.</p>
                     </div>
                 <div class='notes'>
                     <h3>Final thoughts</h3>
